# robotic_arm

KUKA_10/kr10_description/: CMakeLists.txt  package.xml
KUKA_10/kr10_description/launch/: load_kr10.launch  test_kr10.launch
KUKA_10/kr10_description/urdf/: kr10.xacro  kr10_macro.xacro
KUKA_10/kr10_gazebo/: CMakeLists.txt  package.xml
KUKA_10/kr10_gazebo/launch/: kr10_control.launch  kr10_gazebo.launch  (+2 more)
KUKA_10/kr10_master/: CMakeLists.txt  package.xml
KUKA_10/kr10_moveit/: CMakeLists.txt  package.xml
Robotiq-grippers/: README.md
Robotiq-grippers/conveyor_gripper_description/: CMakeLists.txt
Robotiq-grippers/robotiq_2f_85_description/: CMakeLists.txt  visualize.rviz
Robotiq-grippers/robotiq_3f_description/: CMakeLists.txt  visualize.rviz
Robotiq-grippers/robotiq_3f_gripper_control/: CMakeLists.txt
bazu/: package.xml
bazu/launch/: position_controller_bazu.launch  rviz_bazu.launch
bazu/urdf/: bazu.urdf
bazu_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
bazu_moveit_config/config/: bazu.srdf  fake_controllers.yaml  gazebo_bazu.urdf  ompl_planning.yaml  stomp_planning.yaml
bazu_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
(+93 files in other folders)
